--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Mejerichanka</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Українська кухня, комплексні обіди, бенкети, святкування у Червонограді" />
+    <meta name="keywords"
+        content="Бенкети, святкування подій у Червонограді, ресторани Червоноград , комплексні обіди Червоноград, українська кухня">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="МЕЖИРІЧАНКА" />
+    <meta property="og:description" content="Українська кухня, комплексні обіди, бенкети, святкування у Червонограді" />
+    <meta property="og:image" content="%PUBLIC_URL%/fonchuk.jpeg" />
+    <meta property="og:url" content="https://mejerichanka.netlify.app/" />
+    <meta property="og:type" content="website" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>МЕЖИРІЧАНКА</title>
+
 </head>
+
 <body>
-<div id="root"></div>
+    <div id="root"></div>
 
 </body>
+
 </html>
