--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="МЕЖИРІЧАНКА" />
     <meta property="og:description" content="Українська кухня, комплексні обіди, бенкети, святкування у Червонограді" />
-    <meta property="og:image" content="%PUBLIC_URL%/fonchuk.jpeg" />
+    <meta property="og:image" content="%PUBLIC_URL%/fonchuk.JPG" />
     <!-- <meta property="og:url" content="https://mejerichanka.netlify.app/" /> -->
     <meta property="og:type" content="website" />
 
