--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="МЕЖИРІЧАНКА" />
     <meta property="og:description" content="Українська кухня, комплексні обіди, бенкети, святкування у Червонограді" />
     <meta property="og:image" content="%PUBLIC_URL%/fonchuk.JPG" />
-    <!-- <meta property="og:url" content="https://mejerichanka.netlify.app/" /> -->
+    <meta property="og:url" content="https://mejerichanka.vercel.app/" />
     <meta property="og:type" content="website" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
