--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,8 @@
     <meta property="og:type" content="website" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
     <title>МЕЖИРІЧАНКА</title>
 
